fix: Hiding el-tags scrollbar in select.

--- a/packages/design-system/theme/src/select.scss
+++ b/packages/design-system/theme/src/select.scss
@@ -15,7 +15,8 @@
 
 	.el-select__tags {
 		overflow-x: scroll;
-
+		scrollbar-width: none;
+		-ms-overflow-style: none;
 		&::-webkit-scrollbar {
 			display: none;
 		}
